[gd_scene load_steps=6 format=3 uid="uid://dwvcw8ov07o52"]

[ext_resource type="Script" path="res://src/cards/card_pack/card_display/card_display.gd" id="1_kfvnv"]
[ext_resource type="Texture2D" uid="uid://binscdv5de6g" path="res://assets/art/cards/cards/unimplemented_tmp.png" id="2_y665h"]
[ext_resource type="FontFile" uid="uid://dslvmccm7rnqy" path="res://assets/fonts/Tuffy_Bold_Italic_temp/Tuffy_Bold_Italic.otf" id="3_11eos"]
[ext_resource type="Texture2D" uid="uid://covj33obny8oo" path="res://assets/art/cards/cards/card_active.png" id="4_247di"]
[ext_resource type="Texture2D" uid="uid://dgflj84lofmq7" path="res://assets/art/cards/cards/card_hover.png" id="5_d0ide"]

[node name="card_display" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_kfvnv")

[node name="card_image" type="TextureRect" parent="."]
custom_minimum_size = Vector2(73.25, 96.5)
layout_mode = 2
texture = ExtResource("2_y665h")

[node name="background_image" type="TextureRect" parent="card_image"]
visible = false
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
offset_right = 64.0
offset_bottom = 42.0

[node name="name_label" type="Label" parent="card_image"]
visible = false
layout_mode = 1
offset_right = 12.0
offset_bottom = 6.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_11eos")
theme_override_font_sizes/font_size = 5
text = "name"

[node name="description_label" type="Label" parent="card_image"]
visible = false
layout_mode = 2
offset_left = 4.0
offset_top = 43.0
offset_right = 60.0
offset_bottom = 86.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_11eos")
theme_override_font_sizes/font_size = 5
text = "description"
autowrap_mode = 3

[node name="add_card_button" type="TextureButton" parent="card_image"]
layout_mode = 2
offset_left = -2.5
offset_top = -2.5
offset_right = 58.5
offset_bottom = 76.5
scale = Vector2(1.3, 1.3)
toggle_mode = true
texture_pressed = ExtResource("4_247di")
texture_hover = ExtResource("5_d0ide")

[node name="Sprite2D" type="Sprite2D" parent="card_image"]
visible = false
position = Vector2(32, 45)

[connection signal="pressed" from="card_image/add_card_button" to="." method="_on_add_card_button_pressed"]
[connection signal="toggled" from="card_image/add_card_button" to="." method="_on_add_card_button_toggled"]
